fix device svg alignment

--- a/A2/src/scss/_main.scss
+++ b/A2/src/scss/_main.scss
@@ -1,182 +1,187 @@
 main {
-	section {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 2fr 4fr 9fr;
-		gap: 10px;
-		background: $black;
-		color: white;
-		padding: 15px 30px;
-		border-radius: 15px;
-		overflow: hidden;
-		max-width: 1080px;
-		margin: auto;
-		@media screen and (max-width: 620px) {
-			grid-template-rows: 1fr 5fr 5fr;
-		}
+  section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2fr 4fr 9fr;
+    gap: 10px;
+    background: $black;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 15px;
+    overflow: hidden;
+    max-width: 1080px;
+    margin: auto;
+    @media screen and (max-width: 620px) {
+      grid-template-rows: 1fr 5fr 5fr;
+    }
 
-		h2 {
-			grid-column: 1/3;
-			display: inline-block;
-			max-width: fit-content;
-			animation: slide-in-left 0.3s ease;
+    h2 {
+      grid-column: 1/3;
+      display: inline-block;
+      max-width: fit-content;
+      animation: slide-in-left 0.3s ease;
 
-			&::after {
-				content: "";
-				display: block;
-				margin: 2px 0 0 0;
-				border-bottom: solid 3px $accent-blue;
-				animation: slide-in-left 0.6s ease;
-			}
-		}
+      &::after {
+        content: "";
+        display: block;
+        margin: 2px 0 0 0;
+        border-bottom: solid 3px $accent-blue;
+        animation: slide-in-left 0.6s ease;
+      }
+    }
 
-		p {
-			line-height: 1.5em;
-			font-size: 1.1em;
-			grid-column: 1/3;
-			animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-		}
+    p {
+      line-height: 1.5em;
+      font-size: 1.1em;
+      grid-column: 1/3;
+      animation: fade-in 1.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+    }
 
-		.infographics {
-			grid-column: 1/3;
-			display: flex;
-			width: 100%;
-			align-items: center;
-			justify-content: center;
+    .infographics {
+      grid-column: 1/3;
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
 
-			ol {
-				list-style: none;
-				padding: 0;
-				line-height: 22px;
+      ol {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        height: 152px;
+        justify-content: space-between;
 
-				&:first-of-type {
-					text-align: right;
-					animation: fade-in-left 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-				}
+        &:first-of-type {
+          text-align: right;
+          animation: fade-in-left 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+        }
 
-				&:last-of-type {
-					animation: fade-in-right 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-				}
-			}
+        &:last-of-type {
+          animation: fade-in-right 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+        }
+      }
 
-			svg {
-				animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+      svg {
+        animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 
-				rect.College {
-					fill: $cat-college;
-				}
-				rect.Driving {
-					fill: $cat-driving;
-				}
-				rect.Homework {
-					fill: $cat-homework;
-				}
-				rect.Gaming {
-					fill: $cat-gaming;
-				}
-				rect.Working {
-					fill: $cat-working;
-				}
-				rect.Sleeping {
-					fill: $cat-sleeping;
-				}
-				rect.Family {
-					fill: $cat-family;
-				}
-			}
+        rect.College {
+          fill: $cat-college;
+        }
+        rect.Driving {
+          fill: $cat-driving;
+        }
+        rect.Homework {
+          fill: $cat-homework;
+        }
+        rect.Gaming {
+          fill: $cat-gaming;
+        }
+        rect.Working {
+          fill: $cat-working;
+        }
+        rect.Sleeping {
+          fill: $cat-sleeping;
+        }
+        rect.Family {
+          fill: $cat-family;
+        }
+      }
 
-			@media screen and (max-width: 620px) {
-				justify-content: space-around;
+      @media screen and (max-width: 620px) {
+        justify-content: space-around;
 
-				ol:first-of-type {
-					animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-				}
-				ol:last-of-type {
-					display: none;
-				}
-				svg {
-					animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-				}
-			}
-		}
-	}
+        ol:first-of-type {
+          animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1)
+            both;
+        }
+        ol:last-of-type {
+          display: none;
+        }
+        svg {
+          animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1)
+            both;
+        }
+      }
+    }
+  }
 
-	span,
-	li {
-		font-weight: bold;
-	}
+  span,
+  li {
+    font-weight: bold;
+  }
 
-	.College {
-		color: $cat-college;
-	}
-	.Driving {
-		color: $cat-driving;
-	}
-	.Homework {
-		color: $cat-homework;
-	}
-	.Gaming {
-		color: $cat-gaming;
-	}
-	.Working {
-		color: $cat-working;
-	}
-	.Sleeping {
-		color: $cat-sleeping;
-	}
-	.Family {
-		color: $cat-family;
-	}
+  .College {
+    color: $cat-college;
+  }
+  .Driving {
+    color: $cat-driving;
+  }
+  .Homework {
+    color: $cat-homework;
+  }
+  .Gaming {
+    color: $cat-gaming;
+  }
+  .Working {
+    color: $cat-working;
+  }
+  .Sleeping {
+    color: $cat-sleeping;
+  }
+  .Family {
+    color: $cat-family;
+  }
 
-	@keyframes slide-in-left {
-		0% {
-			transform: translateX(-500px);
-			opacity: 0;
-		}
-		100% {
-			transform: translateX(0);
-			opacity: 1;
-		}
-	}
-	@keyframes fade-in {
-		0% {
-			opacity: 0;
-		}
-		100% {
-			opacity: 1;
-		}
-	}
+  @keyframes slide-in-left {
+    0% {
+      transform: translateX(-500px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
-	@keyframes fade-in-left {
-		0% {
-			transform: translateX(-50px);
-			opacity: 0;
-		}
-		100% {
-			transform: translateX(0);
-			opacity: 1;
-		}
-	}
+  @keyframes fade-in-left {
+    0% {
+      transform: translateX(-50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
 
-	@keyframes fade-in-right {
-		0% {
-			transform: translateX(50px);
-			opacity: 0;
-		}
-		100% {
-			transform: translateX(0);
-			opacity: 1;
-		}
-	}
+  @keyframes fade-in-right {
+    0% {
+      transform: translateX(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
 
-	@keyframes fade-in-bottom {
-		0% {
-			transform: translateY(50px);
-			opacity: 0;
-		}
-		100% {
-			transform: translateY(0);
-			opacity: 1;
-		}
-	}
+  @keyframes fade-in-bottom {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
 }
